t_stick_synth/build/log/idf_py_stdout_output_179403
[1/6] Building C object esp-idf/driver/CMakeFiles/__idf_driver.dir/i2s/i2s_common.c.obj
FAILED: esp-idf/driver/CMakeFiles/__idf_driver.dir/i2s/i2s_common.c.obj 
/home/ian/TStickProject/sygaldry/nixenv/esp-idf-tools/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ian/TStickProject/sygaldry/sygaldry-instruments/t_stick_synth/build/config -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/deprecated -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/analog_comparator/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/dac/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/gpio/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/gptimer/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2c/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2s/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/ledc/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/mcpwm/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/parlio/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/pcnt/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/rmt/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/sdio_slave/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/sdmmc/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/sigma_delta/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/spi/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/temperature_sensor/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/touch_sensor/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/twai/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/uart/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/usb_serial_jtag/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/touch_sensor/esp32/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/newlib/platform_include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/freertos/esp_additions/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_hw_support/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_hw_support/include/soc -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/heap/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/log/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/soc/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/soc/esp32 -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/soc/esp32/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/hal/esp32/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/hal/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/hal/platform_port/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_rom/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_rom/include/esp32 -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_rom/esp32 -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_common/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_system/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_system/port/soc -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_system/port/include/private -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/xtensa/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/xtensa/esp32/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/include/apps -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/include/apps/sntp -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/lwip/src/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/port/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/port/freertos/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/port/esp32xx/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_pm/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_ringbuf/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/efuse/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/efuse/esp32/include -I/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=/home/ian/TStickProject/sygaldry/sygaldry-instruments/t_stick_synth=. -fmacro-prefix-map=/home/ian/TStickProject/sygaldry/nixenv/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/driver/CMakeFiles/__idf_driver.dir/i2s/i2s_common.c.obj -MF esp-idf/driver/CMakeFiles/__idf_driver.dir/i2s/i2s_common.c.obj.d -o esp-idf/driver/CMakeFiles/__idf_driver.dir/i2s/i2s_common.c.obj -c /home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2s/i2s_common.c
/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2s/i2s_common.c: In function 'i2s_channel_write':
/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2s/i2s_common.c:1137:47: error: 'dma' undeclared (first use in this function)
 1137 |         printf("i2s send: %d, %d, %ld, %s \n",dma.buf_size, bytes_can_write, handle->dma.rw_pos, data_ptr);
      |                                               ^~~
/home/ian/TStickProject/sygaldry/nixenv/esp-idf/components/driver/i2s/i2s_common.c:1137:47: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
